@@ -1,3 +1,9 @@
+2008-01-25  Dan Williams  <dcbw@redhat.com>
+
+	* src/main.c
+		- (main, setup_signals, signal_handler): trap SIGTERM and SIGINT and
+			exit cleanly
+
 2008-01-24  Dan Williams  <dcbw@redhat.com>
 
 	Fix gnome.org #505899
